@@ -447,6 +447,10 @@ public final class IrisMetalNativeBridge {
     public static boolean isNullHandle(MemorySegment handle) {
         return handle == null || handle.address() == 0;
     }
+    
+    private static MemorySegment segment(MemorySegment pointer) {
+        return pointer == null || pointer.address() == 0L ? MemorySegment.NULL : pointer;
+    }
 
     // 检查可选功能是否可用
     public static boolean isTexture3DAvailable() {
@@ -488,12 +492,23 @@ public final class IrisMetalNativeBridge {
     // 辅助方法：分配UTF-8字符串到内存段 (Java 22+兼容)
     private static MemorySegment allocateUtf8String(String str) {
         byte[] bytes = str.getBytes(java.nio.charset.StandardCharsets.UTF_8);
-        MemorySegment segment = GLOBAL_STRING_ARENA.allocate(bytes.length + 1);
-        segment.set(ValueLayout.JAVA_BYTE, 0, (byte) 0);  // null terminator
-        for (int i = 0; i < bytes.length; i++) {
-            segment.set(ValueLayout.JAVA_BYTE, i, bytes[i]);
+        // 使用受限 Arena，与 metallum 保持一致
+        // 在 iOS 上，Arena.global() 可能有内存限制
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(bytes.length + 1);
+            segment.set(ValueLayout.JAVA_BYTE, 0, (byte) 0);  // null terminator
+            for (int i = 0; i < bytes.length; i++) {
+                segment.set(ValueLayout.JAVA_BYTE, i, bytes[i]);
+            }
+            // 返回 scope 外的 segment 需要手动复制
+            // 或者返回 arena 内的 segment（会在方法返回后失效）
+            // 但由于我们使用 try-with-resources，arena 会在方法返回后关闭
+            // 所以我们需要将数据复制到全局 arena
+            MemorySegment globalSegment = GLOBAL_STRING_ARENA.allocate(bytes.length + 1);
+            globalSegment.copyFrom(segment);
+            globalSegment.set(ValueLayout.JAVA_BYTE, bytes.length, (byte) 0);
+            return globalSegment;
         }
-        return segment;
     }
 
     public static void releaseObject(MemorySegment handle) {
@@ -1553,14 +1568,35 @@ public final class IrisMetalNativeBridge {
             Iris.logger.warn("[Iris-Metal] compileMslToLibrary: createShaderFunction is null or device is null");
             return MemorySegment.NULL;
         }
+        
         try {
             Iris.logger.info("[Iris-Metal] compileMslToLibrary: MSL source length = {}, label = {}", mslSource.length(), label);
-            MemorySegment source = allocateUtf8String(mslSource);
-            MemorySegment entry = allocateUtf8String("main0");
-            Iris.logger.info("[Iris-Metal] compileMslToLibrary: Calling metallum_create_shader_function...");
-            MemorySegment function = (MemorySegment) createShaderFunction.invoke(device, source, entry);
-            Iris.logger.info("[Iris-Metal] compileMslToLibrary: metallum_create_shader_function returned");
-            return function;
+            
+            // 使用受限 Arena，与 metallum 保持一致
+            // 在 iOS 上，Arena.global() 可能有内存限制
+            try (Arena arena = Arena.ofConfined()) {
+                // 分配字符串内存
+                byte[] sourceBytes = mslSource.getBytes(java.nio.charset.StandardCharsets.UTF_8);
+                byte[] entryBytes = "main0".getBytes(java.nio.charset.StandardCharsets.UTF_8);
+                
+                MemorySegment source = arena.allocate(sourceBytes.length + 1);
+                for (int i = 0; i < sourceBytes.length; i++) {
+                    source.set(ValueLayout.JAVA_BYTE, i, sourceBytes[i]);
+                }
+                source.set(ValueLayout.JAVA_BYTE, sourceBytes.length, (byte) 0);
+                
+                MemorySegment entry = arena.allocate(entryBytes.length + 1);
+                for (int i = 0; i < entryBytes.length; i++) {
+                    entry.set(ValueLayout.JAVA_BYTE, i, entryBytes[i]);
+                }
+                entry.set(ValueLayout.JAVA_BYTE, entryBytes.length, (byte) 0);
+                
+                Iris.logger.info("[Iris-Metal] compileMslToLibrary: Calling metallum_create_shader_function...");
+                MemorySegment function = (MemorySegment) createShaderFunction.invokeExact(
+                        segment(device), source, entry);
+                Iris.logger.info("[Iris-Metal] compileMslToLibrary: metallum_create_shader_function returned, isNull={}", isNullHandle(function));
+                return function;
+            }
         } catch (Throwable t) {
             Iris.logger.error("[Iris-Metal] Failed to compile MSL to library: " + label, t);
             return MemorySegment.NULL;
